--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,18 @@ body{
     padding: 10px;
     font-size: 40px;
 }
+
+
+h2{
+    border-bottom: 2px dotted red;
+
+}
+
+.titulo{
+    border-bottom: 3px solid blue;
+
+}
+
+#algum-titulo{
+    border-bottom: 4px solid green;
+}
